[tool.poetry]
name = "pip_search"
version = "0.1.0"
description = "A package to search like pip used to via PyPi"
authors = ["Victor Garric <victor.garric@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
requests = "^2.27.1"
rich = "^11.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pip_search = "pip_search.__main__:main"